Base - small fixes :wrench:

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1690,7 +1690,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "scss/import"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -1711,49 +1712,13 @@
         "scss/import/_typography.scss",
         "scss/import/_header.scss",
         "scss/import/_footer.scss",
-        "scss/import/_newsfeedpage.scss",
-        "scss/import/_singlepage.scss",
-        "scss/import/_sidebar.scss"
-      ]
-    },
-    {
-      "path": "bundles/Forms/1.0/css/forms.scss",
-      "imports": [
-        "bundles/Forms/1.0/css/import/_mixins.scss",
-        "bundles/Forms/1.0/css/import/_text.scss",
-        "bundles/Forms/1.0/css/import/_remove.scss",
-        "bundles/Forms/1.0/css/import/_color.scss",
-        "bundles/Forms/1.0/css/import/_image.scss",
-        "bundles/Forms/1.0/css/import/_posts.scss",
-        "bundles/Forms/1.0/css/import/_url.scss",
-        "bundles/Forms/1.0/css/import/_toggle.scss",
-        "bundles/Forms/1.0/css/import/_password.scss",
-        "bundles/Forms/1.0/css/import/_options.scss",
-        "bundles/Forms/1.0/css/import/_multi.scss",
-        "bundles/Forms/1.0/css/import/_fader.scss"
-      ]
-    },
-    {
-      "path": "bundles/Forms/2.0/css/forms.scss",
-      "imports": [
-        "bundles/Forms/2.0/css/import/_mixins.scss",
-        "bundles/Forms/2.0/css/import/_text.scss",
-        "bundles/Forms/2.0/css/import/_remove.scss",
-        "bundles/Forms/2.0/css/import/_color.scss",
-        "bundles/Forms/2.0/css/import/_image.scss",
-        "bundles/Forms/2.0/css/import/_posts.scss",
-        "bundles/Forms/2.0/css/import/_url.scss",
-        "bundles/Forms/2.0/css/import/_toggle.scss",
-        "bundles/Forms/2.0/css/import/_password.scss",
-        "bundles/Forms/2.0/css/import/_options.scss",
-        "bundles/Forms/2.0/css/import/_multi.scss",
-        "bundles/Forms/2.0/css/import/_fader.scss",
-        "bundles/Forms/2.0/css/import/_checkbox.scss"
+        "scss/import/_inspiration.scss",
+        "scss/import/_single.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
